# CodingBatHaskell

./: .gitignore  CHANGELOG.md  CodingBatHaskell.cabal  JavaFuncs.hs  LICENSE  Main.hs  README.md  download.hs  hie.yaml  stack.yaml  tests.hs
CodingBat/AP-1/: bigHeights.hs  commonTwo.hs  copyEndy.hs  copyEvens.hs  dividesSelf.hs  hasOne.hs  matchUp.hs  mergeTwo.hs  scoreUp.hs  scores100.hs  scoresAverage.hs  scoresClump.hs  scoresIncreasing.hs  scoresSpecial.hs  sumHeights.hs  sumHeights2.hs  userCompare.hs  wordsCount.hs  wordsFront.hs  wordsWithout.hs  wordsWithoutList.hs
CodingBat/Array-1/: biggerTwo.hs  commonEnd.hs  double23.hs  firstLast6.hs  fix23.hs  front11.hs  frontPiece.hs  has23.hs  make2.hs  makeEnds.hs  makeLast.hs  makeMiddle.hs  makePi.hs  maxEnd3.hs  maxTriple.hs  midThree.hs  middleWay.hs  no23.hs  plusTwo.hs  reverse3.hs  rotateLeft3.hs  sameFirstLast.hs  start1.hs  sum2.hs  sum3.hs  swapEnds.hs  unlucky1.hs
CodingBat/Array-2/: bigDiff.hs  centeredAverage.hs  countEvens.hs  either24.hs  evenOdd.hs  fizzArray.hs  fizzArray2.hs  fizzArray3.hs  fizzBuzz.hs  has12.hs  has22.hs  has77.hs  haveThree.hs  isEverywhere.hs  lucky13.hs  matchUp.hs  modThree.hs  more14.hs  no14.hs  notAlone.hs  only14.hs  post4.hs  pre4.hs  sameEnds.hs  shiftLeft.hs  sum13.hs  sum28.hs  sum67.hs  tenRun.hs  tripleUp.hs  twoTwo.hs  withoutTen.hs  zeroFront.hs  zeroMax.hs
CodingBat/Array-3/: canBalance.hs  countClumps.hs  fix34.hs  fix45.hs  linearIn.hs  maxMirror.hs  maxSpan.hs  (+2 more)
Src/: Download.hs  JavaParser.hs
src/: JavaFuncs.hs  JavaParser.hs  Main.hs  download.hs
(+231 files in other folders)
